--- a/ePortfolio/src/Hw2.css
+++ b/ePortfolio/src/Hw2.css
@@ -20,13 +20,6 @@
   max-width: 70vh;
 }
 
-.input-group {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1px;
-}
-
 .form-control-hw2 {
   background-color: rgba(0, 0, 0, 0);
   border: 4px solid white;
