--- a/ePortfolio/src/Hw3.css
+++ b/ePortfolio/src/Hw3.css
@@ -21,8 +21,8 @@
     display: inline;
     align-items: center;
     justify-content: center;
-    margin-bottom: 1rem;
     margin-right: 1rem;
+    margin-top: 1rem;
     
 }
 
@@ -48,4 +48,13 @@
     text-align: center;
     margin-left: 10px;
     margin-right: 10px;
-  }
+}
+
+.details-wrapper-hw3 {
+    margin-top: 2rem;
+    width: 100%;
+    max-height: 600px;
+    overflow-y: auto;
+    padding: 1rem;
+    justify-content: center;
+}
